# GPUContainerRunner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  gpu_container_runner.py  pyproject.toml  run_gpu.py  setup.py
.github/: .commit_template
.github/workflows/: ci.yaml
examples/: hello.py
gpu_container_runner/: __main__.py  hello.py  user_input.py
gpu_container_runner/commands/: docker.py  gpu.py
gpu_container_runner/lib/: completer.py  logger.py  notify.py  user_input.py
gpu_container_runner/value_object/: gpu_info.py  script_info.py
tests/: __main__.py
tests/commands/: test_docker.py  test_gpu.py
tests/lib/: test_completer.py  test_user_input.py
tests/value_object/: test_gpu_info.py
