[tool.poetry]
name = "gpu_container_runner"
version = "0.1.0"
description = ""
authors = ["KensukeNakazawa <infokensuke.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slackweb = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
isort = "^5.10.1"
autoflake = "^1.4"
black = "^22.6.0"

[tool.poetry.scripts]
run-gpu = "gpu_container_runner.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
